--- a/yo/yo.vcxproj
+++ b/yo/yo.vcxproj
@@ -35,8 +35,8 @@
     <ClInclude Include="yo_atlas.c" />
     <ClInclude Include="yo_demo.h" />
     <ClInclude Include="yo_demo.c" />
-    <ClInclude Include="yo_glyph.h" />
-    <ClInclude Include="yo_glyph.c" />
+    <ClInclude Include="yo_font.h" />
+    <ClInclude Include="yo_font.c" />
     <ClInclude Include="yo.h" />
     <ClInclude Include="yo.c" />
     <ClInclude Include="impl\yo_impl_win32_gdi.c" />
