--- a/yo/yo.vcxproj.filters
+++ b/yo/yo.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="yo_font_backend_stb.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="yo_core.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="impl\yo_impl_win32_gdi.c">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="yo_font_backend.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
