--- a/yo_csharp/yo_csharp.csproj
+++ b/yo_csharp/yo_csharp.csproj
@@ -12,6 +12,9 @@
     <None Update="yo_dll.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="yo_dll.pdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
