--- a/yo_bindings_gen/yo_bindings_gen.vcxproj
+++ b/yo_bindings_gen/yo_bindings_gen.vcxproj
@@ -18,65 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="main.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="impl\yo_backend_opengl.h" />
-    <ClInclude Include="impl\yo_backend_opengl.c" />
-    <ClInclude Include="colors.h" />
-    <ClInclude Include="impl\yo_impl_win32_gdi.h" />
-    <ClInclude Include="impl\yo_platform_win32.h" />
-    <ClInclude Include="impl\yo_impl_win32_opengl.h" />
-    <ClInclude Include="impl\yo_platform_win32.c" />
-    <ClInclude Include="impl\yo_backend_gdi.h" />
-    <ClInclude Include="impl\yo_backend_gdi.c" />
-    <ClInclude Include="yo.c" />
-    <ClInclude Include="yo_core.c" />
-    <ClInclude Include="yo_atlas.c" />
-    <ClInclude Include="yo_demo.h" />
-    <ClInclude Include="yo_demo.c" />
-    <ClInclude Include="yo.h" />
-    <ClInclude Include="impl\yo_impl_win32_gdi.c" />
-    <ClInclude Include="yo_file.h" />
-    <ClInclude Include="yo_file.c" />
-    <ClInclude Include="yo_font_backend.h" />
-    <ClInclude Include="yo_font_backend_freetype.c" />
-    <ClInclude Include="yo_font_backend_freetype.h" />
-    <ClInclude Include="yo_font_backend_stb.h" />
-    <ClInclude Include="yo_font_backend_stb.c" />
-    <ClInclude Include="yo_font_data.h" />
-    <ClInclude Include="yo_font_table.h" />
-    <ClInclude Include="yo_font_table.c" />
-    <ClInclude Include="yo_memory.c" />
-    <ClInclude Include="impl\yo_impl_win32_opengl.c" />
-    <ClInclude Include="yo_string.c" />
-    <ClInclude Include="yo_styles.h" />
-    <ClInclude Include="yo_svg.h" />
-    <ClInclude Include="yo_core.h" />
-    <ClInclude Include="yo_atlas.h" />
-    <ClInclude Include="yo_internal.h" />
-    <ClInclude Include="yo_math.h" />
-    <ClInclude Include="yo_memory.h" />
-    <ClInclude Include="yo_string.h" />
-    <ClInclude Include="yo_svg.c" />
-    <ClInclude Include="yo_widgets.h" />
-    <ClInclude Include="yo_widgets.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cpp.hint" />
-    <None Include="impl\yo_opengl_fs.glsl">
-      <FileType>Document</FileType>
-    </None>
-    <None Include="impl\yo_opengl_vs.glsl">
-      <FileType>Document</FileType>
-    </None>
-  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
+    <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9d859c7e-7f93-4053-857c-13976b0609de}</ProjectGuid>
-    <RootNamespace>yo</RootNamespace>
+    <ProjectGuid>{96206cf1-69a3-4bfb-9c67-4f6eb4a18dac}</ProjectGuid>
+    <RootNamespace>yobindingsgen</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -97,14 +43,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -124,28 +70,14 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)thirdparty\freetype\include</IncludePath>
-    <LibraryPath>$(ProjectDir)thirdparty\freetype\lib\x64;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)thirdparty\freetype\include</IncludePath>
-    <LibraryPath>$(ProjectDir)thirdparty\freetype\lib\x64;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LibraryPath>$(ProjectDir)thirdparty\freetype\lib\x86;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(ProjectDir)thirdparty\freetype\include</IncludePath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LibraryPath>$(ProjectDir)thirdparty\freetype\lib\x86;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(ProjectDir)thirdparty\freetype\include</IncludePath>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <TreatWarningAsError>true</TreatWarningAsError>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -176,38 +108,39 @@
       <ConformanceMode>true</ConformanceMode>
       <TreatWarningAsError>true</TreatWarningAsError>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <LanguageStandard>stdcpp20</LanguageStandard>
-      <DisableLanguageExtensions>
-      </DisableLanguageExtensions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <GenerateMapFile>true</GenerateMapFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
+      <WarningLevel>Level3</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <TreatWarningAsError>true</TreatWarningAsError>
-      <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <LanguageStandard>stdcpp20</LanguageStandard>
-      <DisableLanguageExtensions>
-      </DisableLanguageExtensions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <GenerateMapFile>true</GenerateMapFile>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="yo_bindings_csharp.h" />
+    <ClInclude Include="yo_bindings_csharp.c" />
+    <ClInclude Include="yo_bindings_lex.h" />
+    <ClInclude Include="yo_bindings_lex.c" />
+    <ClInclude Include="yo_bindings_parse.h" />
+    <ClInclude Include="yo_bindings_parse.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
