--- a/yo_playgroud/yo_playgroud.vcxproj.filters
+++ b/yo_playgroud/yo_playgroud.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="yo_layout_experiments.c">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
